<resources>
    <string name="app_name">Smart Office</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configure device</string>
    <string name="search_for_your_arduino_device">*search for your Arduino device</string>
    <string name="search_for_device">SEARCH FOR DEVICE</string>
    <string name="title_location_permission">Permission needed </string>
    <string name="text_location_permission">This application needs to know your location!</string>
    <string name="ok_location_permission">Grant permission  </string>
    <string name="please_enable_bluetooth">Please enable bluetooth first!</string>
    <string name="please_grant_location_permission">Please grant permission to your device\'s location!</string>
    <string name="location_permission_granted">The location permission granted successfully!</string>
    <string name="location_permission_not_granted">The location permission was not granted!</string>
    <string name="select_a_device">Select a device:</string>
    <string name="no_device_found">No device was found!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="already_connected_to_device">You are already connected to your device!</string>
    <string name="device_connection_error">Could not connect to device, please try again!</string>
    <string name="connected_to">Connected to:</string>
    <string name="looks_good">Looks good!</string>
    <string name="no_requests_available">There are no requests available at this time. Back to work!</string>
    <string name="please_connect">Please connect to your Arduino device!</string>
    <string name="you_must_be_connected_to_configure">You must be connected to do this!</string>
    <string name="cancel">Cancel</string>
    <string name="configure_device">Configure device</string>
    <string name="device_name">Device name</string>
    <string name="device_password">Device password</string>
    <string name="change">Change</string>
    <string name="here_you_can_change_your_device_name_and_password">*Here you can change your device name.</string>
    <string name="fill_the_form">Please fill the form.</string>
    <string name="could_not_deliver_data">Could not deliver data, please try again!</string>
    <string name="please_reconnect_device">Please disconnect, restart the device and turn it off and on for the changes to take effect.</string>
    <string name="max_10_chars_error">The name must be max. 10 characters long!</string>
    <string name="name_command">+BLTE=</string>
</resources>
